[project]
name = "nutrition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "django>=5.2.4",
    "django-elasticsearch-dsl==8.0.0",
    "django-rest-framework>=0.1.0",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
]
